<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.constraint.Guideline
        android:id="@+id/guide_left_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_left_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />


    <android.support.constraint.Guideline
        android:id="@+id/guide_right_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />


    <android.support.constraint.Guideline
        android:id="@+id/guide_top_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_bottom_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider_horizontal_color"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guide_left_1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_location"
        android:layout_width="@dimen/_12"
        android:layout_height="@dimen/_15"
        android:contentDescription="@null"
        app:layout_constraintLeft_toLeftOf="@id/guide_left_1"
        app:layout_constraintRight_toRightOf="@id/guide_left_1"
        app:layout_constraintTop_toBottomOf="@id/guide_top_2"
        app:srcCompat="@drawable/ic_location_white" />


    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guide_left_2"
        app:layout_constraintRight_toLeftOf="@id/guide_right_1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:id="@+id/lin_cell"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_desc_check_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checked_in_at"
                    android:textColor="@color/time_label"
                    android:textSize="@dimen/_10" />

                <TextView
                    android:id="@+id/item_txt_chk_in_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10_30_am"
                    android:textColor="@color/time_label"
                    android:textSize="@dimen/_10" />

                <LinearLayout
                    android:id="@+id/lin_chk_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5"
                    android:layout_marginStart="@dimen/_5"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <View
                        android:id="@+id/view_lin1"
                        android:layout_width="1dp"
                        android:layout_height="@dimen/_15"
                        android:background="@color/time_label" />

                    <TextView
                        android:id="@+id/item_desc_check_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/checked_out_at"
                        android:textColor="@color/time_label"
                        android:textSize="@dimen/_10" />

                    <TextView
                        android:id="@+id/item_txt_chk_out_at"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_10_30_am"
                        android:textColor="@color/time_label"
                        android:textSize="@dimen/_10" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/item_txt_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/an_evening_of_comedy"
                android:textColor="@color/event_label"
                android:textSize="@dimen/_12sp"
                android:layout_marginTop="4dp"/>


            <LinearLayout
                android:id="@+id/lin_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_loc"
                    android:layout_width="@dimen/_10"
                    android:layout_height="@dimen/_10"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_location" />

                <TextView
                    android:id="@+id/item_txt_loc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5"
                    android:layout_marginStart="@dimen/_5"
                    android:text="@string/east_dining_center"
                    android:textColor="@color/colorGreen"
                    android:textSize="@dimen/_10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_do_check_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5"
                android:orientation="vertical"
                android:visibility="gone"
                tools:ignore="RtlSymmetry">

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/divider_horizontal_color" />

                <TextView
                    android:id="@+id/item_check_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_5"
                    android:paddingTop="@dimen/_5"
                    android:text="@string/check_in"
                    android:textColor="@color/check_in"
                    android:textSize="@dimen/_10sp" />
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>


