<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingPrefix">


    <android.support.constraint.Guideline
        android:id="@+id/guide_left_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_left_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />


    <android.support.constraint.Guideline
        android:id="@+id/guide_right_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />


    <android.support.constraint.Guideline
        android:id="@+id/guide_top_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_bottom_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider_horizontal_color"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guide_left_1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_location"
        android:layout_width="@dimen/_12"
        android:layout_height="@dimen/_15"
        android:contentDescription="@null"
        app:layout_constraintLeft_toLeftOf="@id/guide_left_1"
        app:layout_constraintRight_toRightOf="@id/guide_left_1"
        app:layout_constraintTop_toBottomOf="@id/guide_top_2"
        app:srcCompat="@drawable/ic_location_white" />


    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guide_left_2"
        app:layout_constraintRight_toLeftOf="@id/guide_right_1"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_cell"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_txt_check_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checked_in_at"
                    android:textColor="@color/time_label"
                    android:textSize="@dimen/font_14sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/item_txt_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/an_evening_of_comedy"
                android:textColor="@color/event_label"
                android:textSize="@dimen/font_18sp" />


            <TextView
                android:id="@+id/item_txt_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_location"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/east_dining_center"
                android:textColor="@color/colorGreen"
                android:textSize="@dimen/font_12sp" />


            <LinearLayout
                android:id="@+id/ll_do_check_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5"
                android:orientation="vertical"
                android:visibility="gone"
                tools:ignore="RtlSymmetry">

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/divider_horizontal_color" />

                <TextView
                    fontPath="fonts/roboto.medium.ttf"
                    android:id="@+id/item_check_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_5"
                    android:paddingTop="@dimen/_5"
                    android:text="@string/check_in"
                    android:textColor="@color/check_in"
                    android:textSize="@dimen/font_20sp" />
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>


